// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  class="Tabs"
  data-test-id="cf-ui-tabs"
  role="tablist"
>
  <div
    aria-controls="first"
    aria-selected="false"
    class="Tab"
    data-test-id="cf-ui-tab"
    role="tab"
    tabindex="0"
  >
    First
  </div>
  <div
    aria-controls="second"
    aria-selected="false"
    class="Tab"
    data-test-id="cf-ui-tab"
    role="tab"
    tabindex="0"
  >
    Second
  </div>
  <div
    aria-controls="third"
    aria-selected="false"
    class="Tab"
    data-test-id="cf-ui-tab"
    role="tab"
    tabindex="0"
  >
    Third
  </div>
</div>
`;

exports[`renders the component the first tab disbaled 1`] = `
<nav
  class="Tabs my-extra-class"
  data-test-id="cf-ui-tabs"
  role="navigation"
>
  <a
    aria-disabled="true"
    class="Tab Tab__disabled"
    data-test-id="cf-ui-tab"
    href="/first-link"
    tabindex="0"
  >
    First
  </a>
  <a
    class="Tab super-tab"
    data-test-id="cf-ui-tab"
    href="/second-link"
    tabindex="0"
  >
    Second
  </a>
  <a
    class="Tab"
    data-test-id="cf-ui-tab"
    href="/third-link"
    tabindex="0"
  >
    Third
  </a>
</nav>
`;

exports[`renders the component with role=navigation and an additional class name 1`] = `
<nav
  class="Tabs my-extra-class"
  data-test-id="cf-ui-tabs"
  role="navigation"
>
  <a
    class="Tab"
    data-test-id="cf-ui-tab"
    href="/first-link"
    tabindex="0"
  >
    First
  </a>
  <a
    class="Tab super-tab"
    data-test-id="cf-ui-tab"
    href="/second-link"
    tabindex="0"
  >
    Second
  </a>
  <a
    class="Tab"
    data-test-id="cf-ui-tab"
    href="/third-link"
    tabindex="0"
  >
    Third
  </a>
</nav>
`;
